realice cambios en css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div>
+        <p>Portfolio</p>
+        <p>About</p>
+        <p>Services</p>
+        <p>Contacts</p>
+    </div>
+    <section class="hero">
+        <h1>Luciana Ferraretto</h1>
+        <h2>Web Designer</h2>
+        <p>Soy Luciana Ferraretto, y soy una diseñadora web principiante</p>
+        <button>Costos</button>
+        <img src="img/img1.jpg" alt="">
+    </section>
+    <section class="portfolio"></section>
+    <section class="about"></section>
+    <section class="services"></section>
+    <section class="contact"></section>
 </body>
 </html>
