--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div>
+    <header>
         <p>Portfolio</p>
         <p>About</p>
         <p>Services</p>
         <p>Contacts</p>
-    </div>
+    </header>
     <section class="hero">
         <h1>Luciana Ferraretto</h1>
-        <h2>Web Designer</h2>
+        <h2>Diseñadora Web</h2>
         <p>Soy Luciana Ferraretto, y soy una diseñadora web principiante</p>
         <button>Costos</button>
         <img src="img/img1.jpg" alt="">
