se agregó nav a html y animasiones en css

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 </head>
 <body>
     <header>
-        <p>Portfolio</p>
-        <p>About</p>
-        <p>Services</p>
-        <p>Contacts</p>
+        <nav>
+            <b><p class="contact">Contáctame</p></b>
+           <b><p class="services">Servicios</p></b>
+            <b><p class="about">Sobre mí</p></b>
+            <b><p class="portfolio">Portfolio</p></b>
+        </nav>
     </header>
+    
     <section class="hero">
         <h1>Luciana Ferraretto</h1>
         <h2>Diseñadora Web</h2>
@@ -29,5 +32,6 @@
     <section class="about"></section>
     <section class="services"></section>
     <section class="contact"></section>
+    <footer></footer>
 </body>
 </html>
