--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     </header>
     
     <section class="hero">
-        <h1>Luciana Ferraretto</h1>
+        <b><h1>Luciana Ferraretto</h1></b>
         <h2>Diseñadora Web</h2>
         <p>Soy Luciana Ferraretto, y soy una diseñadora web principiante</p>
         <button>Costos</button>
-        <img src="img/img1.jpg" alt="">
+        <div><img src="img/img1.jpg" alt=""></div>
     </section>
     <section class="portfolio"></section>
     <section class="about"></section>
