se terminaron de definir estilos en css y se acomodó el hero

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
@@ -27,8 +28,25 @@
         <p>Soy Luciana Ferraretto, y soy una diseñadora web principiante</p>
         <button>Costos</button>
         <div><img src="img/img1.jpg" alt=""></div>
+        <div class="barra-lateral">
+            <div class="encabezado">
+                <i class="bi bi-instagram"></i><!--BUSCAR ICONO-->
+                <p>Luciana</p>
+            </div>
+            
+            <p class="titulo">Celular</p>
+            <p>+5 49 351 7899269</p>
+            <p class="titulo">Email</p>  <!--CORREGIR TIPO DE LETRA-->
+            <p>luciana.ferrarettor@gmail.com</p>
+            <p class="titulo">Redes Sociales</p>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-send-fill"></i>
+            <i class="bi bi-behance"></i>
+            <i class="bi bi-linkedin"></i>  <!--BUSCAR ICONO-->
+        </div>
     </section>
-    <section class="portfolio"></section>
+    <section class="trabajos">
+    </section>
     <section class="about"></section>
     <section class="services"></section>
     <section class="contact"></section>
