se agregó todo el contenido al html para su posterior labor con css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/style.css">
@@ -21,14 +21,7 @@
             <b><p class="portfolio">Portfolio</p></b>
         </nav>
     </header>
-    
-    <section class="hero">
-        <b><h1>Luciana Ferraretto</h1></b>
-        <h2>Diseñadora Web</h2>
-        <p>Soy Luciana Ferraretto, y soy una diseñadora web principiante</p>
-        <button>Costos</button>
-        <div><img src="img/img1.jpg" alt=""></div>
-        <div class="barra-lateral">
+     <div class="barra-lateral">
             <div class="encabezado">
                 <i class="bi bi-instagram"></i><!--BUSCAR ICONO-->
                 <p>Luciana</p>
@@ -44,12 +37,64 @@
             <i class="bi bi-behance"></i>
             <i class="bi bi-linkedin"></i>  <!--BUSCAR ICONO-->
         </div>
+    <section class="hero">
+            <b><h1>Luciana Ferraretto</h1></b>
+            <h2>Diseñadora Web</h2>
+            <p>Soy Luciana Ferraretto, y soy una diseñadora web principiante</p>
+            <button>Costos</button>
+            <img src="img/img2.jpeg" alt="">
     </section>
-    <section class="trabajos">
+    <section class="works">
+        <h1>Trabajos</h1>
+        <img src="img/img1.jpg" alt="">
+        <img src="img/img1.jpg" alt="">
+        <img src="img/img1.jpg" alt="">
+        <img src="img/img1.jpg" alt="">
     </section>
-    <section class="about"></section>
-    <section class="services"></section>
-    <section class="contact"></section>
+    <section class="about">
+        <div>
+            <h1>Sobre mi</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At amet error praesentium fugiat quas beatae sint natus eaque, delectus quaerat, animi incidunt, a voluptate hic. Ut laborum quod maiores enim?</p>
+        </div>
+        <div>
+            <h1>Educación</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum reiciendis quae reprehenderit, officiis veniam veritatis enim, dolore deserunt illum optio ipsam repellendus rerum? Accusantium rem consequatur recusandae pariatur, aliquam provident.</p>
+        </div>
+        <div>
+            <h1>Habilidades</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio officiis, quos optio nobis reiciendis assumenda recusandae incidunt quae. Provident eligendi iusto tempora vel incidunt assumenda accusamus quibusdam. Dolorum, itaque quis?</p>
+        </div>
+        
+    </section>
+    <section class="services">
+        <h2>Listas</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+        <h2>Galería de imágenes</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>  
+        <h2>Portafolios</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>  
+        <h2>títulos</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>  
+        <h2>títulos</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>  
+        <h2>títulos</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>          
+    </section>
+    <section class="contact">
+        <div class="vias-contacto">
+           <h2>Celular</h2>
+           <p>3517899269</p>
+           <h2>Email</h2>
+           <p>luciana.ferrarettor@gmail.com</p>
+           <h2>Dirección</h2>
+           <p>Córdoba, Argentina</p>
+        </div>
+        <div>
+            <h2>Proyecto</h2>
+            <!--FORMULARIO-->
+            <button>Enviar mensaje</button>
+        </div>
+    </section>
     <footer></footer>
 </body>
 </html>
