se terminaron de configurar los estilos del hero

--- a/index.html
+++ b/index.html
@@ -27,22 +27,27 @@
                 <p>Luciana</p>
             </div>
             
-            <p class="titulo">Celular</p>
-            <p>+5 49 351 7899269</p>
-            <p class="titulo">Email</p>  <!--CORREGIR TIPO DE LETRA-->
-            <p>luciana.ferrarettor@gmail.com</p>
-            <p class="titulo">Redes Sociales</p>
-            <i class="bi bi-instagram"></i>
-            <i class="bi bi-send-fill"></i>
-            <i class="bi bi-behance"></i>
-            <i class="bi bi-linkedin"></i>  <!--BUSCAR ICONO-->
+            <div class="pie">
+                <p class="titulo">Celular</p>
+                <p>+5 49 351 7899269</p>
+                <p class="titulo">Email</p>  <!--CORREGIR TIPO DE LETRA-->
+                <p>luciana.ferrarettor@gmail.com</p>
+                <p class="titulo">Redes Sociales</p>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-send-fill"></i>
+                <i class="bi bi-behance"></i>
+                <i class="bi bi-linkedin"></i>  <!--BUSCAR ICONO-->
+            </div>
+            
         </div>
     <section class="hero">
-            <b><h1>Luciana Ferraretto</h1></b>
-            <h2>Diseñadora Web</h2>
-            <p>Soy Luciana Ferraretto, y soy una diseñadora web principiante</p>
-            <button>Costos</button>
             <img src="img/img2.jpeg" alt="">
+            <div class="hero-content">
+                <b><h1>Luciana Ferraretto</h1></b>
+                <h2>Diseñadora Web</h2>
+                <p>Soy Luciana Ferraretto, y soy una diseñadora web principiante</p>
+                <button>Costos</button>
+            </div>
     </section>
     <section class="works">
         <h1>Trabajos</h1>
