section de trabajos ya terminada

--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
         <img src="img/img1.jpg" alt="">
         <img src="img/img1.jpg" alt="">
         <img src="img/img1.jpg" alt="">
+        <button class="proyects">Más proyectos</button>
     </section>
     <section class="about">
-        <div>
+        <div class="about-me">
             <h1>Sobre mi</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At amet error praesentium fugiat quas beatae sint natus eaque, delectus quaerat, animi incidunt, a voluptate hic. Ut laborum quod maiores enim?</p>
         </div>
-        <div>
+        <div class="education">
             <h1>Educación</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum reiciendis quae reprehenderit, officiis veniam veritatis enim, dolore deserunt illum optio ipsam repellendus rerum? Accusantium rem consequatur recusandae pariatur, aliquam provident.</p>
         </div>
-        <div>
+        <div class="skills">
             <h1>Habilidades</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio officiis, quos optio nobis reiciendis assumenda recusandae incidunt quae. Provident eligendi iusto tempora vel incidunt assumenda accusamus quibusdam. Dolorum, itaque quis?</p>
         </div>
