se agregó imagen de skills, se realizaron cambios sobre esta section en html y css

--- a/index.html
+++ b/index.html
@@ -57,22 +57,25 @@
         <img src="img/img1.jpg" alt="">
         <button class="proyects">Más proyectos</button>
     </section>
-    <section class="about">
-        <div class="about-me">
+    <section class="AES">
+        <section class="aboutme">
             <h1>Sobre mi</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At amet error praesentium fugiat quas beatae sint natus eaque, delectus quaerat, animi incidunt, a voluptate hic. Ut laborum quod maiores enim?</p>
-        </div>
-        <div class="education">
-            <h1>Educación</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum reiciendis quae reprehenderit, officiis veniam veritatis enim, dolore deserunt illum optio ipsam repellendus rerum? Accusantium rem consequatur recusandae pariatur, aliquam provident.</p>
-        </div>
-        <div class="skills">
-            <h1>Habilidades</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio officiis, quos optio nobis reiciendis assumenda recusandae incidunt quae. Provident eligendi iusto tempora vel incidunt assumenda accusamus quibusdam. Dolorum, itaque quis?</p>
-        </div>
+        </section>
+        <section class="ES">
+            <div class="education">
+                <h1>Educación</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum reiciendis quae reprehenderit, officiis veniam veritatis enim, dolore deserunt illum optio ipsam repellendus rerum? Accusantium rem consequatur recusandae pariatur, aliquam provident.</p>
+            </div>
+            <div class="skills">
+                <h1>Habilidades</h1>
+                <img src="img/img1.jpg" alt="">
+            </div>
+        </section>
+        
         
     </section>
-    <section class="services">
+    <section class="servicios">
         <h2>Listas</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
         <h2>Galería de imágenes</h2>
@@ -86,7 +89,7 @@
         <h2>títulos</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>          
     </section>
-    <section class="contact">
+    <section class="contacto">
         <div class="vias-contacto">
            <h2>Celular</h2>
            <p>3517899269</p>
