se realizaron cambios en css para la section skills

--- a/index.html
+++ b/index.html
@@ -76,18 +76,31 @@
         
     </section>
     <section class="servicios">
-        <h2>Listas</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
-        <h2>Galería de imágenes</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>  
-        <h2>Portafolios</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>  
-        <h2>títulos</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>  
-        <h2>títulos</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>  
-        <h2>títulos</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>          
+        <h1>servicios</h1>
+        <div class="listas">
+            <h2>Listas</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+        </div>
+        <div class="galeria">
+            <h2>Galería de imágenes</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+        </div>
+        <div class="portafolios">
+            <h2>Portafolios</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+        </div>
+        <div class="formularios">
+            <h2>títulos</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+        </div>
+        <div class="transiciones">
+            <h2>títulos</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+        </div>
+        <div class="paginas-web">
+            <h2>títulos</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+        </div>
     </section>
     <section class="contacto">
         <div class="vias-contacto">
