--- a/index.html
+++ b/index.html
@@ -77,44 +77,56 @@
     </section>
     <section class="servicios">
         <h1>servicios</h1>
-        <div class="listas">
-            <h2>Listas</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
-        </div>
-        <div class="galeria">
-            <h2>Galería de imágenes</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
-        </div>
-        <div class="portafolios">
-            <h2>Portafolios</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
-        </div>
-        <div class="formularios">
-            <h2>títulos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
-        </div>
-        <div class="transiciones">
-            <h2>títulos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
-        </div>
-        <div class="paginas-web">
-            <h2>títulos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
-        </div>
+        <section class="uno">
+            <div class="listas">
+                <h2>Listas para páginas web</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+            </div>
+            <div class="galeria">
+                <h2>Galería de imágenes</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+            </div>
+        </section>
+        <section class="dos">
+            <div class="portafolios">
+                <h2>Portafolios</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+            </div>
+            <div class="formularios">
+                <h2>Formularios para páginas web</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+            </div>
+        </section>
+        <section class="tres">
+            <div class="transiciones">
+                <h2>Transiciones para páginas web</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+            </div>
+            <div class="paginas-web">
+                <h2>Páginas web</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+            </div>
+        </section>
     </section>
+
+
     <section class="contacto">
-        <div class="vias-contacto">
-           <h2>Celular</h2>
-           <p>3517899269</p>
-           <h2>Email</h2>
-           <p>luciana.ferrarettor@gmail.com</p>
-           <h2>Dirección</h2>
-           <p>Córdoba, Argentina</p>
-        </div>
-        <div>
-            <h2>Proyecto</h2>
-            <!--FORMULARIO-->
+        <form>
+            <h2>Para Proyectos</h2>
+            <input type="text" placeholder="Su Nombre" required>
+            <input type="email" placeholder="Su Email" required>
+            <input type="tel" placeholder="+54 9(_ _ _) _ _ _ - _ _ - _ _" required>
+            <input class="mensaje" type="text" placeholder="Su Mensaje" required>
             <button>Enviar mensaje</button>
+        </form>
+        <div class="vias-contacto">
+            <h2>Vias de contacto</h2>
+           <h3>Celular</h3>
+           <p>3517899269</p>
+           <h3>Email</h3>
+           <p>luciana.ferrarettor@gmail.com</p>
+           <h3>Dirección</h3>
+           <p>Córdoba, Argentina</p>
         </div>
     </section>
     <footer></footer>
