se realizaron cambios en html y css para semejar aún más los diseños de los portfolios

--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
         </div>
     <section class="hero">
             <img src="img/img2.jpeg" alt="">
-            <div class="hero-content">
+            <section class="hero-content">
                 <b><h1>Luciana Ferraretto</h1></b>
-                <h2>Diseñadora Web</h2>
+              <div>
+                  <hr>
+                  <h2>Diseñadora Web</h2>
+              </div>
+                
                 <p>Soy Luciana Ferraretto, y soy una diseñadora web principiante</p>
                 <button>Costos</button>
-            </div>
+            </section>
     </section>
     <section class="works">
         <h1>Trabajos</h1>
@@ -119,15 +123,22 @@
             <input class="mensaje" type="text" placeholder="Su Mensaje" required>
             <button>Enviar mensaje</button>
         </form>
-        <div class="vias-contacto">
+        <section class="vias-contacto">
             <h2>Vias de contacto</h2>
-           <h3>Celular</h3>
-           <p>3517899269</p>
-           <h3>Email</h3>
-           <p>luciana.ferrarettor@gmail.com</p>
-           <h3>Dirección</h3>
-           <p>Córdoba, Argentina</p>
-        </div>
+           <div class="phone">
+              <h3>Celular</h3>
+              <p>3517899269</p>
+           </div>
+           <div class="email">
+              <h3>Email</h3>
+              <p>luciana.ferrarettor@gmail.com</p>
+           </div>
+           <div class="address">
+              <h3>Dirección</h3>
+              <p>Córdoba, Argentina</p>
+           </div>
+           
+        </section>
     </section>
     <footer></footer>
 </body>
