se realizaron cambios en responsive para las medidas de 480px y 320px

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <b><p class="contact">Contáctame</p></b>
            <b><p class="services">Servicios</p></b>
             <b><p class="about">Sobre mí</p></b>
             <b><p class="portfolio">Portfolio</p></b>
         </nav>
     </header>
-     <div class="barra-lateral">
+    <div class="barra-lateral">
             <div class="encabezado">
                 <i class="bi bi-instagram"></i><!--BUSCAR ICONO-->
                 <p>Luciana</p>
@@ -31,15 +31,14 @@
                 <p class="titulo">Celular</p>
                 <p>+5 49 351 7899269</p>
                 <p class="titulo">Email</p>  <!--CORREGIR TIPO DE LETRA-->
-                <p>luciana.ferrarettor@gmail.com</p>
+                <p class="email--">luciana.ferrarettor@gmail.com</p>
                 <p class="titulo">Redes Sociales</p>
                 <i class="bi bi-instagram"></i>
                 <i class="bi bi-send-fill"></i>
                 <i class="bi bi-behance"></i>
                 <i class="bi bi-linkedin"></i>  <!--BUSCAR ICONO-->
-            </div>
-            
-        </div>
+            </div> 
+    </div>
     <section class="hero">
             <img src="img/img2.jpeg" alt="">
             <section class="hero-content">
@@ -48,7 +47,6 @@
                   <hr>
                   <h2>Diseñadora Web</h2>
               </div>
-                
                 <p>Soy Luciana Ferraretto, y soy una diseñadora web principiante</p>
                 <button>Costos</button>
             </section>
