--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <img src="img/img1.jpg" alt="">
         <img src="img/img1.jpg" alt="">
         <img src="img/img1.jpg" alt="">
-        <button class="proyects">Más proyectos</button>
+        <button class="works-button">Más proyectos</button>
     </section>
     <section class="AES">
         <section class="aboutme">
