se realizaron cambios en html, css y responsive para la finalización del portfolio

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
     </header>
     <div class="barra-lateral">
             <div class="encabezado">
-                <i class="bi bi-instagram"></i><!--BUSCAR ICONO-->
+                <img src="img/img8.jpg" alt="">
                 <p>Luciana</p>
             </div>
             
             <div class="pie">
                 <p class="titulo">Celular</p>
                 <p>+5 49 351 7899269</p>
-                <p class="titulo">Email</p>  <!--CORREGIR TIPO DE LETRA-->
+                <p class="titulo">Email</p>
                 <p class="email--">luciana.ferrarettor@gmail.com</p>
                 <p class="titulo">Redes Sociales</p>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-send-fill"></i>
-                <i class="bi bi-behance"></i>
-                <i class="bi bi-linkedin"></i>  <!--BUSCAR ICONO-->
+                <a href="https://www.instagram.com/lu_ferraretto/"><i class="bi bi-instagram"></i></a>
+                <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcRzDQkNCgBnjNNGMCnNPBjPDNQFnflgTsDbNzDbsSncbsfdGwCBRZFNTRMqgcVgmGPwDFjWV"><i class="bi bi-send-fill"></i></a>
+                <a href="https://www.behance.net/lucianaferrare1"><i class="bi bi-behance"></i></a>
+                <a href="https://www.linkedin.com/in/luciana-ferraretto-45170b299/"><i class="bi bi-linkedin"></i></a>  <!--BUSCAR ICONO-->
             </div> 
     </div>
     <section class="hero">
@@ -53,21 +53,27 @@
     </section>
     <section class="works">
         <h1>Trabajos</h1>
-        <img src="img/img1.jpg" alt="">
-        <img src="img/img1.jpg" alt="">
-        <img src="img/img1.jpg" alt="">
-        <img src="img/img1.jpg" alt="">
+        <img src="img/img4.jpg" alt="">
+        <img src="img/img5.jpg" alt="">
+        <img src="img/img6.jpg" alt="">
+        <img src="img/img7.jpg" alt="">
         <button class="works-button">Más proyectos</button>
     </section>
     <section class="AES">
         <section class="aboutme">
             <h1>Sobre mi</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At amet error praesentium fugiat quas beatae sint natus eaque, delectus quaerat, animi incidunt, a voluptate hic. Ut laborum quod maiores enim?</p>
+            <p>Soy Luciana Ximena Ferraretto Romero y soy una diseñadora web principiante. Tengo 19 años, soy de Córdoba Capital, Argentina y actualmente estoy realizando mi primer curso de programación web.</p>   
+            <p>Mi interés en la programacón surgió en el 2022 luego de una exposición de un programador en un evento de tecnologias vanguardistas e innovadoras.</p>
         </section>
         <section class="ES">
             <div class="education">
                 <h1>Educación</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum reiciendis quae reprehenderit, officiis veniam veritatis enim, dolore deserunt illum optio ipsam repellendus rerum? Accusantium rem consequatur recusandae pariatur, aliquam provident.</p>
+                <h2>Ingeniería Química</h2>
+                <p>Universidad Tecnológica Nacional, Facultad Regional de Córdoba</p>
+                <p>2023-en curso</p>
+                <h2>Diseñadora Web</h2>
+                <p>Universidad Tecnológica Nacional, Facultad Regional de Buenos Aires</p>
+                <p>2023-en curso</p>
             </div>
             <div class="skills">
                 <h1>Habilidades</h1>
@@ -82,31 +88,31 @@
         <section class="uno">
             <div class="listas">
                 <h2>Listas para páginas web</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+                <p>Realización de listados para páginas web de cualquier tipo</p>
             </div>
             <div class="galeria">
                 <h2>Galería de imágenes</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+                <p>Realización de arreglo de imágenes en formato de galería</p>
             </div>
         </section>
         <section class="dos">
             <div class="portafolios">
                 <h2>Portafolios</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+                <p>Desarrollo de Portafolios personales como páginas web utilizando HTML, CSS y JS</p>
             </div>
             <div class="formularios">
                 <h2>Formularios para páginas web</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+                <p>Realización de formularios de cualquier tipo para páginas web</p>
             </div>
         </section>
         <section class="tres">
             <div class="transiciones">
                 <h2>Transiciones para páginas web</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+                <p>Realización de transiciones y animaciones para páginas web</p>
             </div>
             <div class="paginas-web">
                 <h2>Páginas web</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus officiis ratione cupiditate dolorem quaerat aut! Delectus repudiandae sit quas quae accusantium laudantium, nam fuga suscipit eaque a, vero expedita.</p>
+                <p>Desarrolo de páginas web mediante  la utilización de HTML, CSS y JS</p>
             </div>
         </section>
     </section>
@@ -125,7 +131,7 @@
             <h2>Vias de contacto</h2>
            <div class="phone">
               <h3>Celular</h3>
-              <p>3517899269</p>
+              <p>+5493517899269</p>
            </div>
            <div class="email">
               <h3>Email</h3>
@@ -134,6 +140,7 @@
            <div class="address">
               <h3>Dirección</h3>
               <p>Córdoba, Argentina</p>
+              <p>Trabajo por el mundo</p>
            </div>
            
         </section>
